Patched object-fit on mobile search page and minor bug with the signup promotions

--- a/frontend/src/SearchCard.css
+++ b/frontend/src/SearchCard.css
@@ -93,7 +93,8 @@
     border-bottom: 1px solid lightgray;
 }
 
-.SearchCardMobile__image {
+.SearchCardMobile__image > img {
+    width: 100%;
     height: 200px;
     border-radius: 10px;
     overflow: hidden;
